Cleanup for package.json

--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "registerfn",
+  "name": "telebot-register",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "author": "Mikko Pohja",
+  "license": "MIT",
   "dependencies": {
     "@google-cloud/storage": "^1.5.2",
     "telegram-bot-api": "^1.2.0",
